Use /app instead of /home/cosy/install for cosy environment.

--- a/shippable.yml
+++ b/shippable.yml
@@ -1,21 +1,21 @@
 build_image: cosyverif/environment:master
 
 install:
-  - ./bin/build-server --in-ci --prefix=/home/cosy/install
-  - ./bin/build-client --in-ci --prefix=/home/cosy/install
+  - ./bin/build-server --in-ci --prefix=/app
+  - ./bin/build-client --in-ci --prefix=/app
 
 before_script:
   - mkdir -p output
 
 script:
-  - export CPATH="/home/cosy/install/include:${CPATH}"
-  - export LIBRARY_PATH="/home/cosy/install/lib:${LIBRARY_PATH}"
-  - export LD_LIBRARY_PATH="/home/cosy/install/lib:${LD_LIBRARY_PATH}"
-  - /home/cosy/install/bin/cosy-check --output=output --test-format=junit
-  - /home/cosy/install/bin/cosy-server start --port=8080
+  - export CPATH="/app/include:${CPATH}"
+  - export LIBRARY_PATH="/app/lib:${LIBRARY_PATH}"
+  - export LD_LIBRARY_PATH="/app/lib:${LD_LIBRARY_PATH}"
+  - /app/bin/cosy-check --output=output --test-format=junit
+  - /app/bin/cosy-server start --port=8080
   - ./cosy-client-*.sh --target client
   - ./tests/user.sh default ./client/bin/cosy --server=http://127.0.0.1:8080/
-  - /home/cosy/install/bin/cosy-server stop
+  - /app/bin/cosy-server stop
 
 after_failure:
   - cat $HOME/.cosy/__busted__/nginx/access.log
