--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "redis-lua"]
 	path = redis-lua
-	url = https://github.com/nrk/redis-lua.git
+	url = https://github.com/CosyVerif/redis-lua.git
 [submodule "environment"]
 	path = environment
 	url = https://github.com/CosyVerif/environment.git
