--- a/wercker.yml
+++ b/wercker.yml
@@ -33,19 +33,24 @@ build:
 
 deploy:
   steps:
+    - add-to-known_hosts:
+      hostname: cosy.linard.fr
+    - mktemp:
+        envvar: PRIVATEKEY_PATH
+    - create-file:
+        name: write key
+        filename: $PRIVATEKEY_PATH
+        content: $linard_PRIVATE
+        overwrite: true
+        hide-from-log: true
     - script:
-        name: "Install procfile"
-        code: |
-          cp Procfile /app/Procfile
-          chown -R root.users /app
-          echo $WERCKER_OUTPUT_DIR
+        name: Stop
+        code: ssh -i $PRIVATEKEY_PATH -l cosy -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy.linard.fr "./install/bin/cosy-server stop"
     - script:
-        name: "Build server"
+        name: Build
         code: |
-          ./bin/build-server --in-ci --prefix=/app
-    - heroku-deploy:
-        key: $HEROKU_KEY
-        key-name: HEROKU_KEY_PAIR
-        user: $HEROKU_USER
-        app-name: $HEROKU_APP_NAME
-        source_dir: /app
+          ssh -i $PRIVATEKEY_PATH -l cosy -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy.linard.fr "cd sources && git checkout $WERCKER_GIT_BRANCH && git pull"
+          ssh -i $PRIVATEKEY_PATH -l cosy -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy.linard.fr "cd sources && ./bin/build-server --prefix=/home/cosy/install"
+     - script:
+        name: Start
+        code: ssh -i $PRIVATEKEY_PATH -l cosy -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy.linard.fr "./install/bin/cosy-server start --port=8080"
