--- a/wercker.yml
+++ b/wercker.yml
@@ -40,18 +40,17 @@ deploy:
     - create-file:
         name: write key
         filename: $PRIVATEKEY_PATH
-        content: $linard_PRIVATE
+        content: $LINARD_KEY_PAIR_PRIVATE
         overwrite: true
         hide-from-log: true
     - script:
         name: Stop
-        code: ssh -i $PRIVATEKEY_PATH -l cosy -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy.linard.fr "./install/bin/cosy-server stop"
-    - script:
-        name: Update
-        code: ssh -i $PRIVATEKEY_PATH -l cosy -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy.linard.fr "cd sources && git checkout $WERCKER_GIT_BRANCH && git pull"
+        code: ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@cosy.linard.fr "./install/bin/cosy-server stop"
     - script:
         name: Build
-        code: ssh -i $PRIVATEKEY_PATH -l cosy -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy.linard.fr "cd sources && ./bin/build-server --prefix=/home/cosy/install"
+        code: |
+          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@cosy.linard.fr "cd sources && git checkout $WERCKER_GIT_BRANCH && git pull"
+          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@cosy.linard.fr "cd sources && ./bin/build-server --prefix=/home/cosy/install"
     - script:
         name: Start
-        code: ssh -i $PRIVATEKEY_PATH -l cosy -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy.linard.fr "./install/bin/cosy-server start --port=8080"
+        code: ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@cosy.linard.fr "./install/bin/cosy-server start --port=8080"
