--- a/wercker.yml
+++ b/wercker.yml
@@ -54,4 +54,4 @@ deploy:
           ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@cosy.linard.fr "cd sources && ./bin/build-server --prefix=/home/cosy/install"
     - script:
         name: Start
-        code: ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@cosy.linard.fr "./install/bin/cosy-server start --port=8080"
+        code: ssh -f -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@cosy.linard.fr "./install/bin/cosy-server start --port=80"
