--- a/wercker.yml
+++ b/wercker.yml
@@ -34,24 +34,38 @@ build:
 deploy:
   steps:
     - add-to-known_hosts:
-      hostname: cosy.linard.fr
+      hostname: public.cosyverif.lsv.fr
     - mktemp:
         envvar: PRIVATEKEY_PATH
     - create-file:
-        name: write key
+        name: Write key
         filename: $PRIVATEKEY_PATH
-        content: $LINARD_KEY_PAIR_PRIVATE
+        content: $KEYPAIR_PRIVATE
         overwrite: true
         hide-from-log: true
     - script:
         name: Stop
-        code: ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@cosy.linard.fr "./install/bin/cosy-server stop || true"
+        code: ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@public.cosyverif.lsv.fr "./install/$WERCKER_GIT_BRANCH/bin/cosy-server stop --alias="$WERCKER_GIT_BRANCH" || true"
     - script:
         name: Build
         code: |
-          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@cosy.linard.fr "rm -rf sources && git clone https://github.com/$WERCKER_GIT_OWNER/$WERCKER_GIT_REPOSITORY sources"
-          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@cosy.linard.fr "cd sources && git checkout $WERCKER_GIT_BRANCH"
-          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@cosy.linard.fr "cd sources && ./bin/build-server --prefix=/home/cosy/install"
+          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@public.cosyverif.lsv.fr "rm -rf sources-$WERCKER_GIT_BRANCH"
+          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@public.cosyverif.lsv.fr "git clone https://github.com/$WERCKER_GIT_OWNER/$WERCKER_GIT_REPOSITORY sources-$WERCKER_GIT_BRANCH"
+          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@public.cosyverif.lsv.fr "cd sources-$WERCKER_GIT_BRANCH && git checkout $WERCKER_GIT_BRANCH"
+          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@public.cosyverif.lsv.fr "cd sources-$WERCKER_GIT_BRANCH && ./bin/build-server --prefix=/home/cosy/install/$WERCKER_GIT_BRANCH"
+    - script:
+        name: Copy database
+        code: |
+          if [ "$WERCKER_GIT_BRANCH" != "master" ]; then
+            ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@public.cosyverif.lsv.fr "mkdir -p /home/cosy/.cosy/$WERCKER_GIT_BRANCH"
+            ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@public.cosyverif.lsv.fr "cp /home/cosy/.cosy/master/redis.db /home/cosy/.cosy/$WERCKER_GIT_BRANCH/redis.db"
+          fi
     - script:
         name: Start
-        code: ssh -f -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@cosy.linard.fr "./install/bin/cosy-server start --port=80"
+        code: |
+          if ["WERCKER_GIT_BRANCH" = "master" ]; then
+            PORT=8080
+          else
+            PORT=8181
+          fi
+          ssh -f -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no cosy@public.cosyverif.lsv.fr "./install/$WERCKER_GIT_BRANCH/bin/cosy-server start --alias="$WERCKER_GIT_BRANCH" --port=$PORT"
