--- a/wercker.yml
+++ b/wercker.yml
@@ -48,17 +48,23 @@ deploy:
         code: |
           ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no $DEPLOY_USERNAME@$DEPLOY_SERVER "./install/$WERCKER_GIT_BRANCH/bin/cosy-server stop --alias="$WERCKER_GIT_BRANCH" || true"
     - script:
+        name: Create directories
+        code: |
+          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no $DEPLOY_USERNAME@$DEPLOY_SERVER "mkdir -p /home/cosy/sources"
+          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no $DEPLOY_USERNAME@$DEPLOY_SERVER "mkdir -p /home/cosy/install"
+          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no $DEPLOY_USERNAME@$DEPLOY_SERVER "mkdir -p /home/cosy/.cosy"
+          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no $DEPLOY_USERNAME@$DEPLOY_SERVER "mkdir -p /home/cosy/.cosy/$WERCKER_GIT_BRANCH"
+    - script:
         name: Build
         code: |
-          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no $DEPLOY_USERNAME@$DEPLOY_SERVER "rm -rf sources-$WERCKER_GIT_BRANCH"
-          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no $DEPLOY_USERNAME@$DEPLOY_SERVER "git clone https://github.com/$WERCKER_GIT_OWNER/$WERCKER_GIT_REPOSITORY sources-$WERCKER_GIT_BRANCH"
-          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no $DEPLOY_USERNAME@$DEPLOY_SERVER "cd sources-$WERCKER_GIT_BRANCH && git checkout $WERCKER_GIT_BRANCH"
-          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no $DEPLOY_USERNAME@$DEPLOY_SERVER "cd sources-$WERCKER_GIT_BRANCH && ./bin/build-server --prefix=/home/cosy/install/$WERCKER_GIT_BRANCH"
+          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no $DEPLOY_USERNAME@$DEPLOY_SERVER "rm -rf sources/$WERCKER_GIT_BRANCH"
+          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no $DEPLOY_USERNAME@$DEPLOY_SERVER "git clone https://github.com/$WERCKER_GIT_OWNER/$WERCKER_GIT_REPOSITORY sources/$WERCKER_GIT_BRANCH"
+          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no $DEPLOY_USERNAME@$DEPLOY_SERVER "cd sources/$WERCKER_GIT_BRANCH && git checkout $WERCKER_GIT_BRANCH"
+          ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no $DEPLOY_USERNAME@$DEPLOY_SERVER "cd sources/$WERCKER_GIT_BRANCH && ./bin/build-server --prefix=/home/cosy/install/$WERCKER_GIT_BRANCH"
     - script:
         name: Copy database
         code: |
           if [ "$WERCKER_GIT_BRANCH" != "master" ]; then
-            ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no $DEPLOY_USERNAME@$DEPLOY_SERVER "mkdir -p /home/cosy/.cosy/$WERCKER_GIT_BRANCH"
             ssh -i $PRIVATEKEY_PATH -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no $DEPLOY_USERNAME@$DEPLOY_SERVER "cp /home/cosy/.cosy/master/redis.db /home/cosy/.cosy/$WERCKER_GIT_BRANCH/redis.db || true"
           fi
     - script:
